Fix code so the search bar is only visible in the all movies view

--- a/src/MovieContainer/MovieContainer.css
+++ b/src/MovieContainer/MovieContainer.css
@@ -8,7 +8,6 @@
   padding-bottom: 10vh;
   margin-right: auto;
   margin-left: auto;
-  border: 2px solid green;
 }
 
 @media only screen and (max-width: 1100px) {
